--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
         </div>
 
-       <img src="/Users/jmvega/Desktop/IMG_2876.JPG" alt="PlayStation 5">  <img src="IMG_2880.JPG" alt="Stage">
+       <img src="IMG_2876.JPG" alt="PlayStation 5">  <img src="IMG_2880.JPG" alt="Stage">
     </section> 
 
     <!-- My goals -->
