--- a/index.html
+++ b/index.html
@@ -90,26 +90,18 @@
        <img src="IMG_2876.JPG" alt="PlayStation 5">  <img src="IMG_2880.JPG" alt="Stage">
     </section> 
 
-    <!-- My goals -->
-    <section class="my-goal" >
-         <h2 class="section__title">My goals</h2>
+    <!-- Porfolio -->
+    <section class="porfolio" >
+         <h2 class="section__title">Portfolio</h2>
         <p class="section__subtitle"></p>
 
-        <div class="porfolio" id="goal1">
+        <div class="porfolio" id="goal">
             <!-- portfolio item 01-->
                 <a href="#1" class="portfolio__item">
-               #1 To be able to become a skilled developer     
+                    <p><a href= https://sweetfreak.github.io/media-generator/index.html>Visit Media-generator</a></p>  
                 </a> 
 
-                 <!-- portfolio item 02-->
-                 <a href="#2" class="portfolio__item">
-               #2 To get into acting  
-                </a>
-
-                 <!-- portfolio item 03-->
-                 <a href="#3" class="portfolio__item">
-                #3 To travel around the world
-                </a>
+             
 
                
         </div>
