--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
             </div> <!-- service -->
 
             <div class="service">
+                
                 <h3>Coding</h3>
                 <p>I am curently in a program that has opened my eyes into the behind the scenes of software. 
                     Learning new things in this field has really put me to the test and has pushed me to do better. 
@@ -98,8 +99,15 @@
         <div class="porfolio" id="goal">
             <!-- portfolio item 01-->
                 <a href="#1" class="portfolio__item">
-                    <p><a href= https://sweetfreak.github.io/media-generator/index.html>Visit Media-generator</a></p>  
+                    <p><a href= https://sweetfreak.github.io/media-generator/index.html>Visit Media-generator</a></p> 
                 </a> 
+                <a href="#2" class="portfolio_item">
+                    <p><a= href= https://thawing-fortress-07226.herokuapp.com/>Visit Blog post</a></p>
+                </a>
+                <a href="#3" class="portfolio_item">
+                    <p><a= href= https://tranquil-plains-33887.herokuapp.com/>Visit E-Z Zoom</a></p>
+                </a>
+
 
              
 
