--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
         </div>
 
-       <img src="IMG_2876.JPG" alt="PlayStation 5">  <img src="IMG_2880.JPG" alt="Stage">
+       <img class="bottomimg" src="IMG_2876.JPG" alt="PlayStation 5">  <img class="bottomimg2"src="IMG_2880.JPG" alt="Stage">
     </section> 
 
     <!-- Porfolio -->
