--- a/index.html
+++ b/index.html
@@ -118,14 +118,14 @@
         <footer>
             <!-- replace with email address -->
             <a href="mailto:Hello@Jeremiah.dev" class="footer__link">Contact information</a>
-            <ul class="social-link">
-                <li class="social-list__item"><a class="social-list__link" 
-                    href="https://www.facebook.com/jeremiah.vega.921/?show_switched_toast=0&show_invite_to_follow=0&show_switched_tooltip=0&show_podcast_settings=0&show_community_review_changes=0&show_community_rollback=0&show_follower_visibility_disclosure=0"
-                    >Facebook</a></li>
+            <ul class="social-link">  
+                <li class="social-list__item1"><a class="social-list__link "
+                    href= "https://www.facebook.com/jeremiah.vega.921/?show_switched_toast=0&show_invite_to_follow=0&show_switched_tooltip=0&show_podcast_settings=0&show_community_review_changes=0&show_community_rollback=0&show_follower_visibility_disclosure=0"
+                    ><img src="download.png" alt="Facebooklogo"></a></li>
                 <li class="social-list__item"><a class="social-list__link"
-                     href="https://www.tiktok.com/@jmvega145">TikTok</a></li>
+                     href="https://www.tiktok.com/@jmvega145"><img src="download-1.png"></li>
                 <li class="social-list__item"><a class="social-list__link" 
-                    href="https://www.instagram.com/jmvega316/">Instagram</a></li>
+                    href="https://www.instagram.com/jmvega316/"><img src="download.jpg"></li>
                 <li class="social-list__item"><a class="social-list__link"
                      href="">Jmvega316@gmail.com</a></li> 
             </ul>
